Add textbox widget + BNY widgets dispatch, wildcard operator, IDE rebuild
Major additions/fixes accumulated this session:
- widgets ilib: new textbox widget (GTK3 GtkTextView, find/fix/write methods,
  Tab-for-4-spaces), Screen title=/dimensions() sugar, variadic .add(a,b,c) sugar
- BNY backend: full widget ctor/method dispatch (was 0% working), fixed missing
  ac_widgets_init() call (root cause of every prior "no display" GTK crash),
  lazy-pack handling generalized to all widget kinds
- Wildcard operator (p%) wired end-to-end: parser PERCENT-token folding + existing
  gl hitbox pattern-matching machinery
- ir.cpp: fixed multi-part $...$ concatenation collapse, string-vs-operator
  ambiguity in lowerExpr, recv.write() argument drop, stringm.find collision
  with widget receivers
- native-cpu: renamed from pointers/ across all backend FFI shims
- keybinds ilib removed (folded into compiler as embedded data)
- AC IDE rebuilt natively in AC (ac-ide/ac_ide.ac, AC->BNY standalone binary)
  replacing the old Electron+Monaco app
- restored examples/.gitignore (was accidentally deleted, was letting thousands
  of generated per-backend example artifacts show as untracked)

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>